force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Acceptance_Criterion__c/fields/agf__Work__c.field-meta.xml
<CustomField>
    <fullName>agf__Work__c</fullName>
    <label>Work</label>
    <referenceTo>agf__ADM_Work__c</referenceTo>
    <relationshipLabel>Acceptance Criteria</relationshipLabel>
    <relationshipName>Acceptance_Criteria</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>