force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Acceptance_Criterion__c/validationRules/agf__Description_is_not_null.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Description_is_not_null</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( agf__Description__c )</errorConditionFormula>
    <errorMessage>Description cannot be blank!</errorMessage>
</ValidationRule>