force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Acceptance_Criterion__c/validationRules/agf__Name_is_not_null.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Name_is_not_null</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Name )</errorConditionFormula>
    <errorMessage>Name cannot be blank!</errorMessage>
</ValidationRule>